# simlify

./: .black.toml  .coveragerc  .gitignore  .gitlab-ci.yml  .ignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pytest.ini  .ruff.toml  CODEOWNERS  CODE_OF_CONDUCT.md  Dockerfile  LICENSE.md  Makefile  README.md  conda-lock.yml  environment.yml  mkdocs.yml  pixi.toml  pyproject.toml  test-pyproject.toml
.github/workflows/: codecov.yml  docs.yml  tests.yml
api/: index.md
api/simulation/: contexts.md  index.md  prep.md  topo.md
api/simulation/amber/: index.md  prep.md  topo.md
api/structure/: index.md  select.md  solvent.md  structure.md
api/structure/pdb/: index.md  names.md  orientation.md  positioning.md  utils.md
docker/: Dockerfile-env
docs/: .nav.yml  .pages  gen_ref_pages.py
docs/.overrides/: main.html
docs/case-studies/: .nav.yml  .pages
docs/case-studies/hiv-protease/: .nav.yml  .pages  background.md  index.md
docs/case-studies/hiv-protease-open/: index.md
docs/case-studies/rogfp2/: .pages
docs/cli/: index.md
docs/cli/pdb/: index.md
docs/concepts/: .nav.yml
docs/css/: base.css  mol.css
docs/develop/: deploy.md  index.md  makefile.md
simlify/: __init__.py  config.py  utils.py
simlify/cli/: config.py  core.py  parsers.py  structure.py
simlify/cli/pdb/: __init__.py  filter.py  merge.py  numbering.py  resname.py  water.py
simlify/cli/prep/: slurm.py  topo.py
simlify/cli/structure/: __init__.py  center.py  extract.py  min_box.py
simlify/configs/: __init__.py  core.py  ff.py  run.py  slurm.py  solution.py  topo.py
simlify/configs/amber/: __init__.py  cli.py  core.py  inputs.py
simlify/configs/gnina/: core.py
simlify/configs/utils/: io.py
simlify/configs/westpa/: __init__.py  cli.py  core.py  environment.py
simlify/data/: atomistic.py  store.py
simlify/data/backends/: _parquet.py  _zarr.py
simlify/schemas/: __init__.py  ff.py  run.py  slurm.py  solution.py  topo.py
simlify/schemas/amber/: __init__.py  cli.py  inputs.py  schema.py
simlify/schemas/gnina/: core.py  (+1 more)
simlify/simulation/: contexts.py  prep.py  slurm.py  topo.py
simlify/structure/: __init__.py  center.py  dims.py  extract.py  io.py  pos.py  select.py  solvent.py  structure.py
simlify/workflows/: prep.py
simulify/: __init__.py  utils.py
simulify/simulation/: contexts.py
tests/: conftest.py  test_amber_prep.py  test_amber_sim_prep.py  test_case_studies.py  test_simulation_contexts.py  test_solvent.py  test_store.py
tests/files/: .gitignore
tests/simulation/: test_amber_prep.py  test_amber_sim_prep.py  test_render_amber.py  test_render_slurm.py  test_slurm.py
tests/structure/: test_dims.py  test_extract.py
(+94 files in other folders)
