[project]
authors = [
    {name = "OASCI", email = "us@oasci.org"}
]
description = "Simplify your molecular simulation workflow."
name = "simlify"
version = "0.0.0"
readme = "README.md"
requires-python = ">=3.11"

# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "loguru>=0.7.2,<0.8",
    "numpy>=2.2.4,<3",
    "scipy>=1.15.2,<2",
    "pydantic>=2.10.6,<3",
    "mdanalysis>=2.9.0,<3",
]

[project.scripts]
simlify = "simlify.cli:cli_main"

[build-system]
requires = ["setuptools"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simlify*"]
