[project]
name = "simlify"
description = "Simplify your molecular simulation workflow."
authors = [
    {name = "Scientific Computing Studio", email = "us@scient.ing"}
]
maintainers = [
    {name = "Alex M. Maldonado", email = "alex.maldonado@pitt.edu"}
]
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
]

dependencies = [
    "loguru>=0.7.2,<1.0",
    "numpy>=1.2.6,<3",
    "scipy>=1.15.2,<2",
    "pydantic>=2.10.6,<3",
    "pyyaml>=6.0.2,<7",
    "mdanalysis>=2.9.0,<3",
]

[project.urls]
Documentation = "https://simlify.scient.ing"
Repository = "https://github.com/scienting/simlify"
Issues = "https://github.com/scienting/simlify/issues"
Changelog = "https://github.com/scienting/simlify/blob/main/CHANGELOG.md"


[project.scripts]
simlify = "simlify.cli.core:cli_main"

[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8", "wheel"]

[tool.setuptools.packages.find]
where = ["."]
include = ["simlify*"]

[tool.setuptools_scm]
write_to = "simlify/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-timestamp"

